--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,7 @@
       <h1>Artist Search</h1>
       <p>Type in an artist you want to search</p>
       <p>(search results are dependent on spelling)</p>
-      <input id="firstname" type="text">
-      <input id="lastname" type="text">
+      <input id="name" type="text">
       <input id="submit" type="submit">
 
       <script src="./index.js"></script>
